--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<div class="review">
 							<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore.</p>
-							<p class="nombre">- Carlos Arturo</p>
+							<p class="nombre">- Andrea Guzman</p>
 						</div>
 					</div>
 
@@ -236,5 +236,6 @@
 			</div>
 		</div>
 	</footer>
+	<!-- <a href='https://pngtree.com/so/animal'>animal png from pngtree.com</a> -->
 </body>
 </html>
